--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/logo_aqua"
+        android:src="@drawable/logo_sherlock"
         android:layout_gravity="center_horizontal"/>
 
     <EditText
