--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,6 +10,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/logo_aqua"
+        android:src="@drawable/logo_sherlock"
         android:layout_gravity="center"/>
 </LinearLayout>
